--- a/video06/video06.html
+++ b/video06/video06.html
@@ -22,7 +22,7 @@
         </div>
     <br>
     <br>
-        <div style="text-align: center;"><a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafio%20videos/index.html"> <img src="ceta editada azul.png" alt="Voltar"></a></div>
+        <div style="text-align: center;"><a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafiovideos/index.html"> <img src="ceta editada azul.png" alt="Voltar"></a></div>
 
 
 <h3>Algumas sugestões</h3>
