--- a/video03/video03.html
+++ b/video03/video03.html
@@ -22,7 +22,7 @@
 <br>
 
     <p style="text-align: center;">
-        <a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafio%20videos/index.html">
+        <a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafiovideos/index.html">
             <center><img src="ceta editada azul.png" alt="voltar"></center>
         </a>
     </p>
