feito o rodaé do video 01

--- a/video01.html/video01.html
+++ b/video01.html/video01.html
@@ -25,9 +25,11 @@ h3 {color: aliceblue;}
 <body>
  
     <div class="top-bar">
-        <div class="um"><a href="#">Sobre</a></div>
-        <div class="dois"><a href="#">Canal do Youtube</a></div>
-        <div class="tres"><a href="#">Videos</a></div>
+        <section>
+            <div class="um"><a href="#">Sobre</a></div>
+            <div class="dois"><a href="#">Canal do Youtube</a></div>
+            <div class="tres"><a href="#">Videos</a></div>
+        </section>
   </div>
 
 
