--- a/video05.html
+++ b/video05.html
@@ -108,7 +108,7 @@ border-radius: 25px;
     </div>
   
 
-<div class="imagem"><a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafio%20videos/index.html"> <img src="ceta editada azul.png" alt=""></a></div>
+<div class="imagem"><a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafiovideos/index.html"> <img src="ceta editada azul.png" alt=""></a></div>
 
 <h3>Algumas sugestões</h3>
 
