--- a/video004/video04.html
+++ b/video004/video04.html
@@ -19,7 +19,7 @@
 </center>
 <br>
     <p style="text-align: center;">
-        <a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafio%20videos/index.html">
+        <a href="file:///C:/Users/leoba/OneDrive/Desktop/exercicios%20html%20e%20css/desafiovideos/index.html">
             <img src="ceta editada azul.png" alt="voltar">
         </a>
     </p>
